# award-prediction

./: CLAUDE.md  README.md  ai.py  docker-compose.yaml  golden_globe_movies_2023_statistics.json  golden_globe_movies_data.json  golden_globe_movies_statistics.json  log.txt  main.py  main_golden_globe.py  main_oscars.py  ml.py  ml_final.py  ml_predict_future.py  ml_predict_future_comparative.py  ml_test.py  new_features.py  nuxt_data.json  oscar_movies_2023_data.json  oscar_movies_2023_statistics.json  oscar_movies_data.json  oscar_movies_statistics.json  oscars.csv  oscars_2023.csv  oscars_train  oscars_train_test.json  plots.py  pyproject.toml  scrape_2025.py  script.py  soup.html  test.html  the_game_awards_data.json
csv/: golden_globe_2023.csv  golden_globe_awards.csv  golden_globe_awards_comedy.csv  golden_globe_comedy_2023.csv  oscars_2023.csv  the_game_awards.csv  the_game_awards_2024.csv
data/: golden_globe_movies_2023_data.json  golden_globe_movies_comedy_2023_data.json  golden_globe_movies_comedy_data.json  golden_globe_movies_data.json  oscar_movies_2023_data.json  the_game_awards_2024_data.json  the_game_awards_2025_data.json  the_game_awards_data.json
graficos/oscars/confusion_matrix/: oscars_naive_bayes_results.txt
graficos/oscars/ml/: oscars_decision_tree_results.txt  oscars_naive_bayes_results.txt
raw/: oscar_movies_data.json
resultados/: RESUMO_COMPARATIVO.md
resultados/combinacao/: metrics_log.txt
resultados/criticas/: metrics_log.txt
resultados/ponderado_90_10/: metrics_log.txt
resultados/usuarios/: metrics_log.txt
