[tool.poetry]
name = "oscars-golden-globe-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.8.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
selenium = "^4.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
