[tool.poetry]
name = "oscars-golden-globe-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.8.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
selenium = "^4.28.1"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
imbalanced-learn = "^0.13.0"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
