[tool.poetry]
name = "award-prediction"
version = "0.1.0"
description = "A Python project to predict the award winners in the upcoming award shows."
authors = ["Guilherme Rodovalho <guirodovalho10@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.8.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
selenium = "^4.28.1"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
imbalanced-learn = "^0.13.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
